styles: fix body overflowing on x-axis

--- a/examples/src/styles.css
+++ b/examples/src/styles.css
@@ -12,6 +12,7 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 body {
